fix layout bug on homepage

--- a/css/index.css
+++ b/css/index.css
@@ -138,14 +138,14 @@ h6 {
   top: 0;
   background-image: linear-gradient(to bottom right, rgba(193, 193, 193, 0.6), rgba(0, 0, 0, 0.4));
 }
-.container {
+.about-container {
   background: #0d0d0d;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
-.container .about {
+.about-container .about {
   display: grid;
   max-width: 67%;
   padding: 2rem 2rem;
@@ -154,50 +154,50 @@ h6 {
   grid-gap: 2rem;
   transition: 0.2s ease-out max-width;
 }
-.container .about #team-svg {
+.about-container .about #team-svg {
   margin-top: 10%;
   width: 50%;
   max-width: 15rem;
 }
-.container .about .blue {
+.about-container .about .blue {
   background-image: linear-gradient(to bottom right, #00d9ff, #0098b3);
 }
-.container .about .grey {
+.about-container .about .grey {
   background-image: linear-gradient(to bottom right, #5a5a5a, #292929);
 }
-.container .about .grey h1,
-.container .about .grey h2 {
+.about-container .about .grey h1,
+.about-container .about .grey h2 {
   color: #fff;
 }
-.container .about .grey img {
+.about-container .about .grey img {
   filter: invert(100%);
 }
-.container .about .max-height-sm {
+.about-container .about .max-height-sm {
   max-height: 10rem;
 }
-.container .about .max-height-lg {
+.about-container .about .max-height-lg {
   max-height: 20rem;
 }
-.container .about .box {
+.about-container .about .box {
   width: 100%;
   padding: 2rem;
 }
-.container .about .box img {
+.about-container .about .box img {
   width: 50%;
   min-width: 9rem;
   max-width: 12rem;
 }
-.container .about .box p {
+.about-container .about .box p {
   font-size: 1.6rem;
   font-weight: bold;
 }
-.container .about .box h2 {
+.about-container .about .box h2 {
   font-size: 6rem;
 }
-.container .about .box h3 {
+.about-container .about .box h3 {
   margin-bottom: 2.5rem;
 }
-.container .about .box a {
+.about-container .about .box a {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -206,54 +206,54 @@ h6 {
   color: #000;
   transition: 0.2s ease-in-out all;
 }
-.container .about .box a:hover {
+.about-container .about .box a:hover {
   color: #fff;
   transform: translateY(-3px);
 }
-.container .about .box a:hover img {
+.about-container .about .box a:hover img {
   filter: invert(100%);
 }
-.container .about .span1 {
+.about-container .about .span1 {
   grid-column: span 1;
 }
-.container .about .span2 {
+.about-container .about .span2 {
   grid-column: span 2;
 }
-.container .about .span3 {
+.about-container .about .span3 {
   grid-column: span 3;
 }
-.container .about .center {
+.about-container .about .center {
   display: flex;
   flex-direction: row;
   justify-content: center;
   align-items: center;
 }
-.container .about .center-col {
+.about-container .about .center-col {
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
 }
 @media (max-width: 1306px) {
-  .container .about {
+  .about-container .about {
     max-width: 80%;
   }
 }
 @media (max-width: 1100px) {
-  .container .about {
+  .about-container .about {
     max-width: 90%;
   }
 }
 @media (max-width: 975px) {
-  .container .about .span1 {
+  .about-container .about .span1 {
     grid-column: span 3;
   }
-  .container .about .span2 {
+  .about-container .about .span2 {
     grid-column: span 3;
   }
 }
 @media (max-width: 575px) {
-  .container .about {
+  .about-container .about {
     max-width: 100%;
   }
 }
