--- a/less/about.less
+++ b/less/about.less
@@ -1,4 +1,4 @@
-.container {
+.about-container {
   background: lighten(@color-black, 5%);
   .flex(column, center, center);
 
